--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <iframe style = "width:100%; height:500px" src = "./cube.html"></iframe>
 
 <div style = "text-align:center">
-	<button class = "btn btn-primary" onclick = "document.getElementsByTagName( "iframe" )[ 0 ].contentWindow.document.window.ERNO.Solver()">Solve</button>
+	<button class = "btn btn-primary" onclick = "document.getElementsByTagName( "iframe" )[ 0 ].contentWindow.ERNO.Solver()">Solve</button>
 </div>
 <div>
 </div>
