--- a/index.html
+++ b/index.html
@@ -19,7 +19,7 @@ var solve = function (){
 }
 </script>
 <div style = "text-align:center">
-	<button class = "btn btn-primary" onclick = "solve">Solve</button>
+	<button class = "btn btn-primary" onclick = "solve()">Solve</button>
 </div>
 <div>
 </div>
